--- a/package.json
+++ b/package.json
@@ -18,7 +18,12 @@
     "clean-webpack-plugin": "^0.1.16",
     "copy-webpack-plugin": "^4.0.1",
     "express": "^4.15.4",
+    "install": "^0.10.1",
+    "jquery": "^3.2.1",
+    "npm": "^5.3.0",
     "path": "^0.12.7",
+    "popper.js": "1.11.0",
+    "bootstrap": "4.0.0-beta",
     "showdown": "^1.7.2",
     "ts-loader": "^2.3.2",
     "typescript": "^2.4.2",
