--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/node": "^8.0.20",
     "@types/showdown": "^1.4.32",
     "aws-sdk": "^2.96.0",
+    "bootstrap": "4.0.0-beta",
     "clean-webpack-plugin": "^0.1.16",
     "copy-webpack-plugin": "^4.0.1",
     "express": "^4.15.4",
@@ -23,11 +24,13 @@
     "npm": "^5.3.0",
     "path": "^0.12.7",
     "popper.js": "1.11.0",
-    "bootstrap": "4.0.0-beta",
     "showdown": "^1.7.2",
     "ts-loader": "^2.3.2",
     "typescript": "^2.4.2",
     "webpack": "^3.5.4",
     "webpack-dev-server": "^2.7.1"
+  },
+  "dependencies": {
+    "babili-webpack-plugin": "^0.1.2"
   }
 }
